[package]
name = "fetch-block"
author = "Harper (@hrpr)"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pallas = { git = "https://github.com/jmhrpr/pallas", branch = "debug" }
anyhow = "1.0.66"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
hex = "0.4.3"
clap = { version = "4.0.23", features = ["derive"] }
cbor-diag = "0.1.11"